<resources>
    <string name="app_name">Pip-Boy</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="ID">PERSONAL INFORMATION</string>
    <string name="gender">GENDER</string>
    <string name="name">NAME</string>
    <string name="age">AGE</string>
    <string name="classType">CLASS</string>
    <string name="profilePicture">Profile Picture</string>
    <string name="buttonGenerate">CONFIRM</string>
    <string name="buttonFile">FILE</string>
    <string name="picture_of_vault_boy">Picture of Vault Boy</string>
    <string name="MALE">MALE</string>
    <string name="FEMALE">FEMALE</string>
    <string-array name="classTypeList">
        <item><string name="hunter">HUNTER</string></item>
        <item><string name="thief">THIEF</string></item>
        <item><string name="soldier">SOLDIER</string></item>
        <item><string name="engineer">ENGINEER</string></item>
        <item><string name="cs">CS MAJOR</string></item>
    </string-array>
    <string-array name="genderList">
        <item><string name="male">MALE</string></item>
        <item><string name="female">FEMALE</string></item>
        <item><string name="other">OTHER</string></item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="brain">Brain</string>
    <string name="strength">Strength</string>
    <string name="agility">Agility</string>
    <string name="charisma">Charisma</string>
    <string name="endurance">Endurance</string>
    <string name="luck">Luck</string>
    <string name="hpbox">HP 115/115</string>
    <string name="levelbox">LEVEL 125</string>
</resources>
