<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#000000">

        <TextView
            android:id="@+id/levelbox"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="start|center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/levelbox"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="monospace"
            app:layout_constraintBottom_toBottomOf="@+id/hpbox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/hpbox"
            app:layout_constraintTop_toTopOf="@+id/hpbox"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/endnum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:editable="false"
            android:ems="10"
            android:freezesText="true"
            android:gravity="center|start|center_vertical"
            android:inputType="number"
            android:text="0"
            android:textColor="@color/colorPrimary"
            android:textIsSelectable="false"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="monospace"
            app:layout_constraintBottom_toBottomOf="@+id/endurance"
            app:layout_constraintEnd_toStartOf="@+id/tobereplaced"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/intelligence"
            app:layout_constraintTop_toTopOf="@+id/endurance" />

        <TextView
            android:id="@+id/lucknum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:editable="false"
            android:ems="10"
            android:gravity="center|start|center_vertical"
            android:inputType="number"
            android:text="0"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="monospace"
            app:layout_constraintBottom_toBottomOf="@+id/luck"
            app:layout_constraintEnd_toStartOf="@+id/tobereplaced"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/intelligence"
            app:layout_constraintTop_toTopOf="@+id/luck" />

        <TextView
            android:id="@+id/charnum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:editable="false"
            android:ems="10"
            android:gravity="center|start|center_vertical"
            android:inputType="number"
            android:text="0"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="monospace"
            app:layout_constraintBottom_toBottomOf="@+id/charisma"
            app:layout_constraintEnd_toStartOf="@+id/tobereplaced"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/intelligence"
            app:layout_constraintTop_toTopOf="@+id/charisma" />

        <TextView
            android:id="@+id/dexnum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:editable="false"
            android:ems="10"
            android:gravity="center|start|center_vertical"
            android:inputType="number"
            android:text="0"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="monospace"
            app:layout_constraintBottom_toBottomOf="@+id/agility"
            app:layout_constraintEnd_toStartOf="@+id/tobereplaced"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/intelligence"
            app:layout_constraintTop_toTopOf="@+id/agility" />

        <TextView
            android:id="@+id/luck"
            android:layout_width="110dp"
            android:layout_height="46dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="start|center_vertical"
            android:text="@string/luck"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="monospace"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/endurance"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/luck" />

        <TextView
            android:id="@+id/endurance"
            android:layout_width="110dp"
            android:layout_height="46dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="start|center_vertical"
            android:text="@string/endurance"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="monospace"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/charisma"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/endurance" />

        <TextView
            android:id="@+id/charisma"
            android:layout_width="110dp"
            android:layout_height="46dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="start|center_vertical"
            android:text="@string/charisma"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="monospace"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/agility"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/charisma" />

        <ImageView
            android:id="@+id/tobereplaced"
            android:layout_width="208dp"
            android:layout_height="312dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/goodgeoff" />

        <DigitalClock
            android:id="@+id/clock"
            android:layout_width="165dp"
            android:layout_height="41dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:gravity="center_horizontal|center_vertical"
            android:inputType="time"
            android:text="Clock"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="monospace"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.043" />

        <TextView
            android:id="@+id/intelligence"
            android:layout_width="110dp"
            android:layout_height="46dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="start|center_vertical"
            android:text="@string/brain"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="monospace"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.301"
            tools:text="@string/brain" />

        <TextView
            android:id="@+id/strength"
            android:layout_width="110dp"
            android:layout_height="46dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="start|center_vertical"
            android:text="@string/strength"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="monospace"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/intelligence"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/strength" />

        <TextView
            android:id="@+id/agility"
            android:layout_width="110dp"
            android:layout_height="46dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="start|center_vertical"
            android:text="@string/agility"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="monospace"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/strength"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/agility" />

        <TextView
            android:id="@+id/intnum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:editable="false"
            android:ems="10"
            android:gravity="center|start"
            android:inputType="number"
            android:text="0"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="monospace"
            app:layout_constraintBottom_toBottomOf="@+id/intelligence"
            app:layout_constraintEnd_toStartOf="@+id/tobereplaced"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/intelligence"
            app:layout_constraintTop_toTopOf="@+id/intelligence"
            tools:text="0" />

        <TextView
            android:id="@+id/strnum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:editable="false"
            android:ems="10"
            android:gravity="center|start|center_vertical"
            android:inputType="number"
            android:text="0"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="monospace"
            app:layout_constraintBottom_toBottomOf="@+id/strength"
            app:layout_constraintEnd_toStartOf="@+id/tobereplaced"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/intelligence"
            app:layout_constraintTop_toTopOf="@+id/strength" />

        <TextView
            android:id="@+id/hpbox"
            android:layout_width="202dp"
            android:layout_height="46dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="start|center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/hpbox"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="monospace"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.907" />

        <TextView
            android:id="@+id/namebox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="start|center_vertical"
            android:text="Name"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="monospace"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.023"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.02" />

        <TextView
            android:id="@+id/agebox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="start|center_vertical"
            android:text="Age"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="monospace"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.021"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/namebox"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/classBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="start|center_vertical"
            android:text="Class"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="monospace"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.024"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/agebox"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/genderBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="start|center_vertical"
            android:text="Gender"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="monospace"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.024"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/classBox"
            app:layout_constraintVertical_bias="0.0" />

    </android.support.constraint.ConstraintLayout>

</RelativeLayout>